# microformats2-parser

./: .ghci  .travis.yml  COPYING  Makefile  README.md  microformats2-parser.cabal  stack.yaml
.github/workflows/: all.yaml
executable/: Lambda.hs  Main.hs  Server.hs  WebApp.hs
test-suite/: TestCommon.hs
test-suite/Data/Microformats2/: Jf2Spec.hs  ParserSpec.hs
test-suite/Data/Microformats2/Parser/: HtmlUtilSpec.hs  InternalSpec.hs  PropertySpec.hs
