name:            microformats2-parser
version:         0.0.0
synopsis:        A Microformats 2 parser.
category:        Web
homepage:        https://github.com/myfreeweb/microformats2-parser
author:          Greg V
copyright:       2015 Greg V <greg@unrelenting.technology>
maintainer:      greg@unrelenting.technology
license:         OtherLicense
license-file:    COPYING
build-type:      Simple
cabal-version:   >= 1.18
extra-source-files:
    README.md
tested-with:
    GHC == 7.8.3

source-repository head
    type: git
    location: git://github.com/myfreeweb/microformats2-parser.git

library
    build-depends:
        base >= 4.0.0.0 && < 5
      , text
      , time >= 1.4.0 && < 2
      , either
      , safe
      , data-default
      , microformats2-types == 0.3.*
      , html-conduit
      , xml-lens
      , pcre-heavy
    default-language: Haskell2010
    exposed-modules:
        Data.Microformats2.Parser
        Data.Microformats2.Parser.Internal
    ghc-options: -Wall
    hs-source-dirs: library

test-suite tests
    build-depends:
        base >= 4.0.0.0 && < 5
      , hspec == 2.1.*
      , microformats2-parser
      , microformats2-types
      , raw-strings-qq
      , data-default
      , html-conduit
      , xml-lens
    default-language: Haskell2010
    ghc-options: -threaded -Wall -Werror -fhpc
    hs-source-dirs: test-suite
    main-is: Spec.hs
    other-modules:
        Data.Microformats2.ParserSpec
        Data.Microformats2.Parser.InternalSpec
    type: exitcode-stdio-1.0
